removed unwanted code

--- a/complain_status.ipynb
+++ b/complain_status.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
@@ -164,15 +164,15 @@
        "4  J'ai obtenu un compte de crédit de soins pour ...  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#load data\n",
-    "dataset = pd.read_csv(\"train.csv\")\n",
-    "test = pd.read_csv(\"test.csv\")\n",
+    "dataset = pd.read_csv(\"dataset/train.csv\")\n",
+    "test = pd.read_csv(\"dataset/test.csv\")\n",
     "print(dataset.shape)\n",
     "print(test.shape)\n",
     "dataset.head()"
@@ -989,15 +989,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "_uuid": "dfd03b2ecfbb59de8371902915da8009204e79fa"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {
     "_uuid": "c2984c480d82cc4f174f9b82d67bd6d508bd583c"
@@ -1299,7 +1290,7 @@
    },
    "outputs": [],
    "source": [
-    "# submission.to_csv('sub.csv', encoding='utf-8', index=False)"
+    "submission.to_csv('sub.csv', encoding='utf-8', index=False)"
    ]
   },
   {
